# Memes

./: README.md  docker-compose.yaml
ApiMicroservice/: Dockerfile  pyproject.toml
ApiMicroservice/src/: index.py
ApiMicroservice/src/api/: dependencies.py  routes.py
ApiMicroservice/src/broker/: base.py  kafka.py
ApiMicroservice/src/config/: settings.py
ApiMicroservice/src/database/: connection.py
ApiMicroservice/src/database/models/: __init__.py  base.py  meme.py
ApiMicroservice/src/exceptions/: base.py  handlers.py  meme.py
ApiMicroservice/src/schemas/: base.py  meme.py
ApiMicroservice/src/services/: meme.py
FileMicroservice/: Dockerfile  pyproject.toml
FileMicroservice/src/: index.py
FileMicroservice/src/api/: routes.py
FileMicroservice/src/config/: settings.py
FileMicroservice/src/services/: consumer.py  storage.py
